# OpenTabletop

./: .gitignore  .spectral.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: rfc.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  data-correction.yml  feature-request.yml  spec-change-proposal.yml
.github/workflows/: adr-check.yml  build-docs.yml  container.yml  generate-sdks.yml  validate-openapi.yml
data/mappings/: bgg-categories.yaml  bgg-mechanics.yaml  bgg-themes.yaml
data/samples/: README.md  schema.sql
data/taxonomy/: categories.yaml  mechanics.yaml  themes.yaml
docs/: book.toml  custom.css
docs/src/: SUMMARY.md  governance.md  introduction.md
reference/server-rust/: Cargo.toml  Dockerfile
reference/server-rust/deploy/: docker-compose.yml
reference/server-rust/deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
reference/server-rust/src/: config.rs  error.rs  health.rs  main.rs
scripts/: bundle-spec.sh  generate-sdks.sh  load-samples.js  validate-adrs.sh
sdks/javascript/: package.json
sdks/python/: pyproject.toml
sdks/python/src/opentabletop/: __init__.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
spec/: info.yaml  openapi.yaml
spec/examples/: edition-delta-samurai.yaml  effective-properties.yaml  experience-playtime-spirit-island.yaml  game-spirit-island.yaml  game-with-expansions.yaml  player-count-poll.yaml  relationship-graph.yaml
spec/parameters/: export-filters.yaml  include.yaml  metadata-filters.yaml  pagination.yaml  player-count-filters.yaml  playtime-filters.yaml  sorting.yaml  taxonomy-filters.yaml  weight-filters.yaml
spec/paths/: categories.yaml  designers.yaml  export.yaml  games-{id}-editions.yaml  games-{id}-effective-properties.yaml  games-{id}-expansions.yaml  games-{id}-experience-playtime.yaml  games-{id}-relationships.yaml  games-{id}.yaml  games.yaml  mechanics.yaml  publishers.yaml  search.yaml
spec/schemas/: AlternateName.yaml  Artist.yaml  Award.yaml  Category.yaml  CommunityAgePoll.yaml  Designer.yaml  EditionDelta.yaml  EffectiveProperties.yaml  ErrorResponse.yaml  ExpansionCombination.yaml  ExperiencePlaytimePoll.yaml  ExperiencePlaytimeProfile.yaml  ExportManifest.yaml  FilterSummary.yaml  Game.yaml  GameAward.yaml  GameCredit.yaml  GameEdition.yaml  GameFamily.yaml  GameMode.yaml  GameRelationship.yaml  GameSnapshot.yaml  LanguageDependencePoll.yaml  Mechanic.yaml  PaginatedResponse.yaml  Person.yaml  PlayerCountPoll.yaml  ProductCode.yaml  PropertyModification.yaml  Publisher.yaml  SearchRequest.yaml  SearchResult.yaml  Theme.yaml  TrendDataPoint.yaml  (+1 more)
tools/: index.html
(+94 files in other folders)
