[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentabletop"
version = "0.1.0"
description = "Python client SDK for the OpenTabletop API"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["board-games", "api", "opentabletop", "bgg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/opentabletop"]
