[package]
name = "opentabletop"
version = "0.1.0"
edition = "2024"
description = "Rust client SDK for the OpenTabletop API"
license = "Apache-2.0"
repository = "https://github.com/tabletop-commons/opentabletop"
keywords = ["board-games", "api", "opentabletop", "bgg"]
categories = ["api-bindings", "games"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
